--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -2,7 +2,8 @@
 
 label {
 	font-size:45px;
-	color:white;	
+	color:white;
+	text-shadow: 2px 2px grey;	
 }
 
 button {
@@ -11,6 +12,7 @@ button {
 	border-radius: 12px;
 }
 
-.homepage {
-	padding-bottom:50%;
+img { 
+width: 100%; 
+height: 100%; 
 }
