--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,18 +1,17 @@
 @charset "ISO-8859-1";
 
 .label-header {
-	font-size:45px;
-	color:white;
-	text-shadow: 2px 2px grey;	
+	font-size: 45px;
+	color: white;
+	text-shadow: 0 0 3px black, 0 0 5px grey;
 }
 
 button {
-	background:white;
-	color:black;
+	background: white;
+	color: black;
 	border-radius: 12px;
 }
 
-img { 
-width: 100%; 
-height: 100%; 
+.homepage-button {
+	padding-bottom:200px;
 }
