--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -15,3 +15,8 @@ button {
 .homepage-button {
 	padding-bottom:200px;
 }
+.new {
+	background-repeat: stretch;
+  	height: 100%;
+  	width: 100%;
+}
